--- a/html/if.html
+++ b/html/if.html
@@ -52,7 +52,7 @@
     <p>Exercise 10: ask the user whether they are a cat or a dog person.</p>
     <p>If they like cats, ask them if they prefer a tabby or a tiger</p>
     <p>If they like dogs, ask them if they prefer a chihuahua or a wolf</p>
-    <p>A tabby say "miaow", tigers "growl", a chihuahua says "yap" and a wolf likes to "howl".</p>
+    <p>A tabby says "miaow", tigers "growl", a chihuahua says "yap" and a wolf likes to "howl".</p>
     <p>Show the user their chosen breed and what it says</p>
     <p>Note: both you & the user will have to spell the breeds correctly for this to work</p>
   </div>
