--- a/if.html
+++ b/if.html
@@ -3,8 +3,8 @@
 <head>
   <title>JS IF Exercises</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="../styles/style.css">
-  <script defer src="../js/if.js"></script>
+  <link rel="stylesheet" href="./styles/style.css">
+  <script defer src="./js/if.js"></script>
 </head>
 
 <body>
